5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1635_2447.log
== TEST (2019-04-13 00:38:41) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco > pagamento = preco - pagamento):
	msg = "falta"
	
else:
	(preco < pagemnto = pagemento - preco)
	msg = "troco"
	
print(msg)

	
-- ERROR:
File "XXXX", line 4
    if (preco > pagamento = preco - pagamento):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:39:25) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco > pagamento) = (preco - pagamento):
	msg = "falta"
	
else:
	(preco < pagemnto = pagemento - preco)
	msg = "troco"
	
print(msg)

	
-- ERROR:
File "XXXX", line 4
    if (preco > pagamento) = (preco - pagamento):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:39:34) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco > pagamento) == (preco - pagamento):
	msg = "falta"
	
else:
	(preco < pagemnto = pagemento - preco)
	msg = "troco"
	
print(msg)

	
-- ERROR:
File "XXXX", line 8
    (preco < pagemnto = pagemento - preco)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:39:46) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco > pagamento) == (preco - pagamento):
	msg = "falta"
	
else:
	(preco < pagemnto == pagemento - preco)
	msg = "troco"
	
print(msg)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    (preco < pagemnto == pagemento - preco)
NameError: name 'pagemnto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:40:07) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco > pagamento == preco - pagamento):
	msg = "falta"
	
else:
	(preco < pagemnto == pagemento - preco)
	msg = "troco"
	
print(msg)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    (preco < pagemnto == pagemento - preco)
NameError: name 'pagemnto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:40:41) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco > pagamento == preco - pagamento):
	msg = "falta"
	
else:
	(preco < pagemnto == pagamento - preco)
	msg = "troco"
	
print(msg)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    (preco < pagemnto == pagamento - preco)
NameError: name 'pagemnto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:41:03) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco > pagamento == preco - pagamento):
	msg = "falta"
	
else:
	(preco < pagamento == pagamento - preco)
	msg = "troco"
	
print(msg)

	
-- OUTPUT:
troco
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:04:51) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco > pagamento):
	print(round(pagamento - preco, 2))
	
else:
	print(round(preco - pagemento, 2))

	


	
-- OUTPUT:
-26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:05:20) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco > pagamento):
	print(round(pagamento - preco, 2))
	
else:
	print(round(preco - pagamento, 2))

	


	
-- OUTPUT:
-26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:10:54) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco > pagamento):
	msg = "falta" + (preco - pagamento) 
	
else:
	msg = "troco" + (pagamento - preco)
	
	
print(round(msg, 2))

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    msg = "falta" + (preco - pagamento) 
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:14:48) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	print(round(preco - pagamento, 2))

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    msg = "falta" + (preco - pagamento) 
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:15:32) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	print("falta"round(preco - pagamento, 2))

	


	
-- ERROR:
File "XXXX", line 5
    print("falta"round(preco - pagamento, 2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:15:49) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	print("falta"(round(preco - pagamento, 2)))

	


	
-- ERROR:
File "XXXX", line 5
    print("falta"round(preco - pagamento, 2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:16:06) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	print("falta"(round(preco - pagamento, 2)))

	


	
-- ERROR:
File "XXXX", line 5
    print("falta"round(preco - pagamento, 2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:16:18) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	print("falta"(round(preco - pagamento, 2)))

	


	
-- ERROR:
File "XXXX", line 5
    print("falta"round(preco - pagamento, 2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:19:27) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco"
	
else: 
	valor = preco - pagamento

	


	
-- ERROR:
File "XXXX", line 5
    print("falta"round(preco - pagamento, 2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:19:27) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco"
	
else: 
	valor = preco - pagamento

	


	
-- ERROR:
File "XXXX", line 5
    print("falta"round(preco - pagamento, 2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:20:12) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco"
	
else: 
	valor = preco - pagamento
	msg = "falta"
	
	
print(msg(round(valor, 2)))

	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(msg(round(valor, 2)))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:20:59) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg == "troco"
	
else: 
	valor = preco - pagamento
	msg == "falta"
	
	


	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    msg == "falta"
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:22:16) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco"
	
else: 
	valor = preco - pagamento
	msg = "falta"
	
print(msg)
print(round(valor, 2))
	
	


	


	
-- OUTPUT:
falta
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:22:16) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco"
	
else: 
	valor = preco - pagamento
	msg = "falta"
	
print(msg)
print(round(valor, 2))
	
	


	


	
-- OUTPUT:
falta
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:23:10) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco de"
	
else: 
	valor = preco - pagamento
	msg = "falta"
	
print((msg)print(round(valor, 2)))
	
	


	


	
-- ERROR:
File "XXXX", line 12
    print((msg)print(round(valor, 2)))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:23:42) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco de"
	
else: 
	valor = preco - pagamento
	msg = "falta"
	
print(msg) + print(round(valor, 2))
	
	


	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(msg) + print(round(valor, 2))
TypeError: unsupported operand type(s) for +: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:24:24) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco de"
	
else: 
	valor = preco - pagamento
	msg = "falta"
	
print(msg) 
print(round(valor, 2))
	
	


	


	
-- OUTPUT:
falta
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:24:30) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco de"
	
else: 
	valor = preco - pagamento
	msg = "falta"
	
print(msg) 
print(round(valor, 2))
	
	


	


	
-- OUTPUT:
falta
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:24:37) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco de"
	
else: 
	valor = preco - pagamento
	msg = "falta"
	
print(msg) 
print(round(valor, 2))
	
	


	


	
-- EXECUTION TIME:
0.160282
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de
28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:25:06) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco de"
	
else: 
	valor = preco - pagamento
	msg = "falta"
	
print(round(msg + valor, 2))
	
	


	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round(msg + valor, 2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:25:34) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco de"
	
else: 
	valor = preco - pagamento
	msg = "falta"
	
print(msg + round(valor, 2))
	
	


	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(msg + round(valor, 2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:25:58) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco de"
	
else: 
	valor = preco - pagamento
	msg = "falta"
	
print(msg + (round(valor, 2)))
	
	


	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(msg + (round(valor, 2)))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:26:36) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = pagamento - preco
	msg = "troco de"
	
else: 
	valor = preco - pagamento
	msg = "falta"
	
print((msg)(round(valor, 2)))
	
	


	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print((msg)(round(valor, 2)))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:27:39) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor ="troco de" pagamento - preco
	
	
else: 
	 preco - pagamento
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 5
    valor ="troco de" pagamento - preco
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:27:47) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = "troco de" pagamento - preco
	
	
else: 
	 preco - pagamento
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 5
    valor = "troco de" pagamento - preco
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:28:07) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
  
if (preco <= pagamento):
	valor = troco de pagamento - preco
	
	
else: 
	 preco - pagamento
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 5
    valor = troco de pagamento - preco
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:28:46) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
 msg = "troco de"
if (preco <= pagamento):
	valor = msg +  pagamento - preco
	
	
else: 
	 preco - pagamento
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 3
    msg = "troco de"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:28:53) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
msg = "troco de"
if (preco <= pagamento):
	valor = msg +  pagamento - preco
	
	
else: 
	 preco - pagamento
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 3
    msg = "troco de"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:29:16) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
msg = "troco de"
msg2 = "falta"
if (preco <= pagamento):
	valor = msg +  pagamento - preco
	
	
else: 
	 preco - pagamento
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 3
    msg = "troco de"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:29:32) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
msg = "troco de"
msg2 = "falta"
if (preco <= pagamento):
	valor = msg +  pagamento - preco
	
	
else: 
	 preco - pagamento
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 3
    msg = "troco de"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:29:48) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
msg = "troco de"
msg2 = "falta"
if (preco <= pagamento):
	valor = msg +  pagamento - preco
	
	
else: 
	 valor = msg +  preco - pagamento
	
	
	
	



	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    valor = msg +  preco - pagamento
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:30:20) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
msg = "troco de"
msg2 = "falta"
if (preco <= pagamento):
	valor = msg +  pagamento - preco
	
	
else: 
	 valor = msg +  preco - pagamento
		
print(round(valor, 2))
	
	
	
	



	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    valor = msg +  preco - pagamento
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:30:38) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
msg = "troco de"
msg2 = "falta"
if (preco <= pagamento):
	valor = msg + pagamento - preco
	
	
else: 
	 valor = msg + preco - pagamento
		
print(round(valor, 2))
	
	
	
	



	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    valor = msg + preco - pagamento
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:31:07) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
msg = "troco de"
msg2 = "falta"
if (preco <= pagamento):
	valor = msg + (pagamento - preco)
	
	
else: 
	 valor = msg + preco - pagamento
		
print(round(valor, 2))
	
	
	
	



	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    valor = msg + preco - pagamento
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:31:24) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
msg = "troco de"
msg2 = "falta"
if (preco <= pagamento):
	valor = msg + (pagamento - preco)
	
	
else: 
	 valor = msg + (preco - pagamento)
		
print(round(valor, 2))
	
	
	
	



	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    valor = msg + (preco - pagamento)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:31:30) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))
msg = "troco de"
msg2 = "falta"
if (preco <= pagamento):
	valor = msg + (pagamento - preco)
	
	
else: 
	 valor = msg + (preco - pagamento)
		
print(round(valor, 2))
	
	
	
	



	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    valor = msg + (preco - pagamento)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:44:21) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))

if (preco <= pagamento ):
	valor = pagamento - preco
	msg = "troco de" + valor
	print(round(, 2))
	
	
else: 
	 valor = msg + (preco - pagamento)
		
print(round(valor, 2))
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 7
    print(round(, 2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:44:33) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))

if (preco <= pagamento ):
	valor = pagamento - preco
	msg = "troco de" + valor
	print(round(msg, 2))
	
	
else: 
	 valor = msg + (preco - pagamento)
		
print(round(valor, 2))
	
	
	
	



	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    valor = msg + (preco - pagamento)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:45:01) 
-- CODE:
preco = float(input("informe o preco: "))
pagamento = float(input("informe o pagamento: "))

if (preco <= pagamento ):
	valor = pagamento - preco
	msg = troco de + valor
	print(round(msg, 2))
	
	
else: 
	 valor = msg + (preco - pagamento)
		
print(round(valor, 2))
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 6
    msg = troco de + valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:52:22) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
round(preco, 2)
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 6
    msg = troco de + valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:55:14) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (pagamento > preco):
	troco = pagamento - preco
	round(troco, 2)
	
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 6
    msg = troco de + valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:55:32) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (pagamento > preco):
	troco = pagamento - preco
	total = round(troco, 2)
	
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 6
    msg = troco de + valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:55:37) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (pagamento > preco):
	troco = pagamento - preco
	total = round(troco, 2)
	
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 6
    msg = troco de + valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:56:03) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (pagamento > preco):
	troco = pagamento - preco
	total = round(troco, 2)
	print(total + "troco de")
	
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 6
    msg = troco de + valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:56:44) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (pagamento > preco):
	troco = pagamento - preco
	total = round(troco, 2)
	print("troco de" + total)
	
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 6
    msg = troco de + valor
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:56:59) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (pagamento > preco):
	troco = pagamento - preco
	total = round(troco, 2)
	print("troco de" total)
	
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 7
    print("troco de" total)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:57:16) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (pagamento > preco):
	troco = pagamento - preco
	total = round(troco, 2)
	print("troco de") + total
	
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 7
    print("troco de" total)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:57:23) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (pagamento > preco):
	troco = pagamento - preco
	total = round(troco, 2)
	print("troco de") + total
	
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 7
    print("troco de" total)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:58:19) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (pagamento > preco):
	troco = pagamento - preco
	total = round(troco, 2)
	"troco de " + print(total)
	
	
	
	
	



	


	
-- ERROR:
File "XXXX", line 7
    print("troco de" total)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:37:14) 
-- CODE:
p = float(input("preco: "))
pg = float(input("pagamento: ")
troco = pagamento - preco
  
if (pagamento >= preco == troco):
			  
	
	
-- ERROR:
File "XXXX", line 3
    troco = pagamento - preco
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:37:45) 
-- CODE:
p = float(input("preco: "))
pg = float(input("pagamento: ")
troco = pg - p
  
if (pg >= p == troco):
			  
	
	
-- ERROR:
File "XXXX", line 3
    troco = pg - p
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:38:09) 
-- CODE:
p = float(input("preco: "))
pg = float(input("pagamento: ")

  
if (pg >= p == troco):
			  
	
	
-- ERROR:
File "XXXX", line 5
    if (pg >= p == troco):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:38:18) 
-- CODE:
p = float(input("preco: "))
pg = float(input("pagamento: ")

  
if (pg >= p):
			  
	
	
-- ERROR:
File "XXXX", line 5
    if (pg >= p):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:38:36) 
-- CODE:
p = float(input("preco: "))
pg = float(input("pagamento: ")

  if (pg >= p):
			  
	
	
-- ERROR:
File "XXXX", line 4
    if (pg >= p):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:38:43) 
-- CODE:
p = float(input("preco: "))
pg = float(input("pagamento: ")

if (pg >= p):
			  
	
	
-- ERROR:
File "XXXX", line 4
    if (pg >= p):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:38:57) 
-- CODE:
p = float(input("preco: "))
pg = float(input("pagamento: ")

if (pg>=p):
			  
	
	
-- ERROR:
File "XXXX", line 4
    if (pg>=p):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:39:29) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")

if (pg >= p):
			  
	
	
-- ERROR:
File "XXXX", line 4
    if (pg >= p):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:39:53) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")

if(pg >= p):
			  
	
	
-- ERROR:
File "XXXX", line 4
    if(pg >= p):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:40:07) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")

if(p >= pg):
			  
	
	
-- ERROR:
File "XXXX", line 4
    if(p >= pg):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:40:14) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")

if (p >= pg):
			  
	
	
-- ERROR:
File "XXXX", line 4
    if (p >= pg):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:40:38) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")

if (p >= pg):
		valor = p - pg
			  
	
	
-- ERROR:
File "XXXX", line 4
    if (p >= pg):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:48:03) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")
x = p - pg
y = pg - p
if (pg >= p):
		print(round("Troco de"y,2))
			  
			  
			  
	
	
-- ERROR:
File "XXXX", line 3
    x = p - pg
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:48:17) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")
x= p - pg
y= pg - p
if (pg >= p):
		print(round("Troco de"y,2))
			  
			  
			  
	
	
-- ERROR:
File "XXXX", line 3
    x= p - pg
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:49:28) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")
x= p - pg
y= pg - p
if (pg >= p):
		print(round("Troco de"y,2))
else:
		print(round("Falta"x,2))
			  
			  
			  
	
	
-- ERROR:
File "XXXX", line 3
    x= p - pg
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:49:40) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")
x= p-pg
y= pg-p
if (pg >= p):
		print(round("Troco de"y,2))
else:
		print(round("Falta"x,2))
			  
			  
			  
	
	
-- ERROR:
File "XXXX", line 3
    x= p-pg
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:49:46) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")
x=p-pg
y= pg-p
if (pg >= p):
		print(round("Troco de"y,2))
else:
		print(round("Falta"x,2))
			  
			  
			  
	
	
-- ERROR:
File "XXXX", line 3
    x=p-pg
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:51:25) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")
x=p-pg
y= pg-p
if (pg >= p):
		print(round("Troco de"y,2))
else:
		print(round("Falta"x, 2))
			  
			  
			  
	
	
-- ERROR:
File "XXXX", line 3
    x=p-pg
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:51:39) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")
x= -pg
y= pg-p
if (pg >= p):
		print(round("Troco de"y,2))
else:
		print(round("Falta"x, 2))
			  
			  
			  
	
	
-- ERROR:
File "XXXX", line 3
    x= -pg
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:53:58) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")

if (pg >= p):
	   y = pg-p
		print(round("Troco de"y,2))
else:
		x = p-pg
	   print(round("Falta"x, 2))
			  
			  
			  
	
	
-- ERROR:
File "XXXX", line 4
    if (pg >= p):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:54:29) 
-- CODE:
p = float(input("p: "))
pg = float(input("pg: ")
if (pg > p):
	   y = pg-p
		print(round("Troco de"y,2))
else:
		x = p-pg
	   print(round("Falta"x, 2))
			  
			  
			  
	
	
-- ERROR:
File "XXXX", line 3
    if (pg > p):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:58:55) 
-- CODE:
x = pagamento - preco
y = preco - pagamento

preco = float(input("preco: "))		  
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	print(round("falta"y, 2))
			  
	
	
-- ERROR:
File "XXXX", line 8
    print(round("falta"y, 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:59:04) 
-- CODE:
x = pagamento - preco
y = preco - pagamento

preco = float(input("preco: "))		  
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	print(round("falta" y, 2))
			  
	
	
-- ERROR:
File "XXXX", line 8
    print(round("falta" y, 2))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:59:06) 
-- CODE:
x = pagamento - preco
y = preco - pagamento

preco = float(input("preco: "))		  
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	print(round("falta" y, 2))
			  
	
	
-- ERROR:
File "XXXX", line 8
    print(round("falta" y, 2))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:59:07) 
-- CODE:
x = pagamento - preco
y = preco - pagamento

preco = float(input("preco: "))		  
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	print(round("falta" y, 2))
			  
	
	
-- ERROR:
File "XXXX", line 8
    print(round("falta" y, 2))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:59:49) 
-- CODE:
x = pagamento - preco
y = preco - pagamento

preco = float(input("preco: "))		  
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	print("falta"round(y, 2))
			  
	
	
-- ERROR:
File "XXXX", line 8
    print("falta"round(y, 2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
